--- a/sources/enumext.dtx
+++ b/sources/enumext.dtx
@@ -591,7 +591,7 @@
     keywordstyle  = [1]{\color{gray}},%
     keywords      = [1]{begin,end,Verbatim,env,myseq,false,NewDocumentCommand,newlength, the, red, blue, gray,%
                         settowidth, dimeval, dimexpr, IfBooleanTF,footnotehyper, DocumentMetadata, %
-                        IfPDFManagementActiveTF, IfPDFManagementActiveF, RenewDocumentCommand, pt, em, %
+                        IfDocumentMetadataTF, IfDocumentMetadataF, RenewDocumentCommand, pt, em, %
                         SuspendTagging, ResumeTagging, NewCommandCopy, IfHyperBoolean, N, J, D, Nee, %
                         Nnn, nn, Ne, w, n, %
                     },%
@@ -1450,7 +1450,7 @@
 %<*example>
 % \fi
 \begin{examplecode}[frame=single]
-\IfPDFManagementActiveF
+\IfDocumentMetadataF
   {
     \usepackage{footnotehyper}
     \makesavenoteenv{enumext}
@@ -1679,15 +1679,17 @@
 % The \mymeta{keys} set in the \emph{optional argument} of environments and
 % commands have the \emph{highest precedence}, overriding both
 % options passed by \ics*{setenumext}. If the \emph{optional argument} is not
-% passed, the first level of the environment \myenv*{enumext} will be
+% passed, the \emph{first level} of the environment \myenv*{enumext} will be
 % taken by default.
 %
 % \smallskip
 %
 % \begin{important}*
-% The key \mykey{save-ans} that activate the \emph{\enquote{storage
-% system}} must NOT be passed through this command and must be passed
-% directly in the \emph{optional argument} of the \emph{\enquote{first level}}
+% For security reasons the keys \mykey{resume}, \mykey{resume*}, \mykey{reset},
+% \mykey{reset*}, \mykey{series} and \mykey{save-ans} they can NOT be set by 
+% this command and are ignored. The key \mykey{save-ans} that activate the 
+% \emph{\enquote{storage system}} must be passed directly in the 
+% \emph{optional argument} of the \emph{\enquote{first level}}
 % of the environment in which they are executed.
 % \end{important}
 %
@@ -3645,6 +3647,8 @@
 % for \emph{\enquote{each}} \mymarg{content} stored in \emph{prop list} \mymarg{store name}. The value must be a
 % \mymeta{positive integer}.
 %
+% \smallskip
+%
 % \keyexampcmd{start}{integer}{\mydim{1}}[foreachkeyans]
 %
 % \smallskip
@@ -3658,6 +3662,8 @@
 %
 % Sets the \emph{position} of the \emph{prop list} \mymarg{store name} from which execution
 % will finish. The value must be a \mymeta{positive integer}.
+%
+% \smallskip
 %
 % \keyexampcmd{before}{code}{empty}[foreachkeyans]
 %
@@ -6929,7 +6935,7 @@ Some text here
   {
     \bool_if:NT \g_@@_standar_bool
       {
-        \IfPDFManagementActiveTF
+        \IfDocumentMetadataTF
           {
             \@@_renew_footnote:
           }
@@ -6945,7 +6951,7 @@ Some text here
   {
     \bool_if:NT \g_@@_standar_bool
       {
-        \IfPDFManagementActiveTF
+        \IfDocumentMetadataTF
           {
             \@@_print_footnote:
           }
@@ -6965,7 +6971,7 @@ Some text here
 %    \begin{macrocode}
 \cs_new_protected:Nn \@@_renew_footnote_starred:
   {
-    \IfPDFManagementActiveTF
+    \IfDocumentMetadataTF
       {
         \@@_renew_footnote_mini:
       }
@@ -6978,7 +6984,7 @@ Some text here
   }
 \cs_new_protected:Nn \@@_print_footnote_starred:
   {
-    \IfPDFManagementActiveTF
+    \IfDocumentMetadataTF
       {
         \@@_print_footnote_mini:
       }
@@ -7224,7 +7230,7 @@ Some text here
 % When \emph{tagged} \texttt{PDF} is active |\makelabel| is redefined using
 % |\makebox| to work correctly (\S\ref{env:item-starred-enumext}). From
 % the user side it is convenient to have a key that allows using this
-% redefinition with |\makebox| without having |\IfPDFManagementActiveTF| active.
+% redefinition with |\makebox| without having |\IfDocumentMetadataTF| active.
 %
 % \begin{macro}[int]{mode-box}
 %   We define the key \mykey{mode-box} only for the \emph{\enquote{first level}}
@@ -9543,7 +9549,7 @@ Some text here
 %    \begin{macrocode}
 \cs_new_protected:Nn \@@_standar_save_counter:
   {
-    \bool_if:NTF \g_@@_standar_bool % enumext NOT nested
+    \bool_if:NTF \g_@@_standar_bool
       {
         \@@_standar_save_counter_aux:
         \int_compare:nNnT { \l_@@_level_int } = { 1 }
@@ -9587,7 +9593,7 @@ Some text here
   }
 \cs_new_protected:Nn \@@_starred_save_counter:
   {
-    \bool_if:NTF \g_@@_starred_bool % enumext* NOT nested
+    \bool_if:NTF \g_@@_starred_bool
       {
         \@@_starred_save_counter_aux:
         \int_if_exist:cT { g_@@_resume_ \l_@@_store_name_tl _int }
@@ -12119,7 +12125,7 @@ Some text here
 % When \emph{labeling} \texttt{PDF} is active |\makelabel| is redefined
 % as |\hss #1| and the only way to get the \mykey{align} key to work
 % correctly is to redefine |\makelabel| using |\makebox|. The best way to
-% implement this is to use the conditional command |\IfPDFManagementActiveTF|
+% implement this is to use the conditional command |\IfDocumentMetadataTF|
 % to force this redefinition and the dedicated \mykey{mode-box} key to
 % manually activate it by the user.
 %
@@ -12272,7 +12278,7 @@ Some text here
 %    \begin{macrocode}
 \cs_new_protected:Nn \@@_make_label:
   {
-    \IfPDFManagementActiveTF
+    \IfDocumentMetadataTF
       {
         \@@_make_label_box:
       }
@@ -12444,7 +12450,10 @@ Some text here
 %    \begin{macrocode}
 \keys_define:nn { enumext / enumext* }
   {
-    unknown .code:n = { \@@_starred_unknown_keys:n {#1} },
+    unknown .code:n = { 
+                        \tl_set:Nn \l_@@_envir_name_tl { enumext* }
+                        \@@_starred_unknown_keys:n {#1} 
+                      },
   }
 %    \end{macrocode}
 %   Internal functions for handling |unknown| key.
@@ -12457,10 +12466,10 @@ Some text here
   {
     \tl_if_blank:nTF {#2}
       {
-        \msg_error:nnn { enumext } { starred-unknown-key } {#1}
+        \msg_error:nne { enumext } { starred-unknown-key } {#1}
       }
       {
-        \msg_error:nnnn { enumext } { starred-unknown-key-value } {#1} {#2}
+        \msg_error:nnee { enumext } { starred-unknown-key-value } {#1} {#2}
       }
   }
 %    \end{macrocode}
@@ -12476,12 +12485,16 @@ Some text here
 %    \begin{macrocode}
 \cs_set_protected:Npn \@@_tmp:n #1
   {
-    \keys_define:nn { enumext / #1 }
+    \keys_define:nn { enumext / level-#1 }
       {
-        unknown .code:n = { \@@_standar_unknown_keys:n {##1} },
+        unknown .code:n = { 
+                            \int_set:Nn \l_@@_level_int { #1 }
+                            \tl_set:Nn \l_@@_envir_name_tl { enumext }
+                            \@@_standar_unknown_keys:n {##1} 
+                          },
       }
   }
-\clist_map_inline:nn { level-1,level-2,level-3,level-4 } { \@@_tmp:n {#1} }
+\clist_map_inline:nn {1, 2, 3, 4} { \@@_tmp:n {#1} }
 %    \end{macrocode}
 %   Internal functions for handling |unknown| key.
 %    \begin{macrocode}
@@ -12493,10 +12506,10 @@ Some text here
   {
     \tl_if_blank:nTF {#2}
       {
-        \msg_error:nnn { enumext } { standar-unknown-key } {#1}
+        \msg_error:nne { enumext } { standar-unknown-key } {#1}
       }
       {
-        \msg_error:nnnn { enumext } { standar-unknown-key-value } {#1} {#2}
+        \msg_error:nnee { enumext } { standar-unknown-key-value } {#1} {#2}
       }
   }
 %    \end{macrocode}
@@ -12610,7 +12623,7 @@ Some text here
 %    \begin{macrocode}
 \cs_new_protected:Nn \@@_keyans_make_label:
   {
-    \IfPDFManagementActiveTF
+    \IfDocumentMetadataTF
       {
         \@@_keyans_make_label_box:
       }
@@ -13647,7 +13660,7 @@ Some text here
 %    \begin{macrocode}
 \cs_new_protected_nopar:Npn \@@_start_list_tag:n #1
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \socket_assign_plug:nn {tagsupport/@@/starred} {start-list-tags}
         \socket_use:nn {tagsupport/@@/starred} {#1}
@@ -13655,7 +13668,7 @@ Some text here
    }
 \cs_new_protected_nopar:Nn \@@_stop_start_list_tag:
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \socket_assign_plug:nn {tagsupport/@@/starred} {stop-start-tags}
         \socket_use:nn {tagsupport/@@/starred} { }
@@ -13663,7 +13676,7 @@ Some text here
    }
 \cs_new_protected_nopar:Npn \@@_stop_list_tag:n #1
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \socket_assign_plug:nn {tagsupport/@@/starred} {stop-list-tags}
         \socket_use:nn {tagsupport/@@/starred} {#1}
@@ -13720,7 +13733,7 @@ Some text here
 %    \begin{macrocode}
 \cs_new_protected_nopar:Nn \@@_anspic_start_list_tag:
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \socket_assign_plug:nn {tagsupport/@@/keyanspic} {start-list-tags}
         \socket_use:n {tagsupport/@@/keyanspic}
@@ -13728,7 +13741,7 @@ Some text here
    }
 \cs_new_protected_nopar:Nn \@@_anspic_stop_start_list_tag:
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \socket_assign_plug:nn {tagsupport/@@/keyanspic} {stop-start-tags}
         \socket_use:n {tagsupport/@@/keyanspic}
@@ -13736,7 +13749,7 @@ Some text here
    }
 \cs_new_protected_nopar:Nn \@@_anspic_stop_list_tag:
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \socket_assign_plug:nn {tagsupport/@@/keyanspic} {stop-list-tags}
         \socket_use:n {tagsupport/@@/keyanspic}
@@ -14000,7 +14013,7 @@ Some text here
 % \begin{macro}{keyanspic}
 %   Now we define the environment \myenv*{keyanspic}. For compatibility
 %   with \emph{tagged} \texttt{PDF} we must use the |\begin{|\myenv{list}|}|
-%   form and a lot of conditional code using |\IfPDFManagementActiveTF|.
+%   form and a lot of conditional code using |\IfDocumentMetadataTF|.
 %   We will first stop the code for automatic \emph{tagged} \texttt{PDF}
 %   for \myenv{list} environments, redefine |\item| so that it cannot be
 %   used, and stop the code for automatic \emph{tagged} \texttt{PDF} for
@@ -14014,7 +14027,7 @@ Some text here
     \@@_keyans_pic_safe_exec:
     \@@_keyans_pic_parse_keys:n {#1}
     \begin{list} { } { \@@_keyans_pic_arg_two: }
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \tag_suspend:n {list}
       }
@@ -14023,7 +14036,7 @@ Some text here
       {
         \msg_error:nn { enumext } { keyanspic-item-cmd }
       }
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \tag_resume:n {keyanspic}
         \tag_tool:n {para/tagging=false}
@@ -14036,19 +14049,19 @@ Some text here
 %   |\anspic| using the \cs{@@_anspic_exec:} function.
 %    \begin{macrocode}
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \tag_resume:n {keyanspic}
         \tag_mc_end_push:
         \tag_struct_begin:n {tag=L,attribute=enumerate}
       }
     \@@_anspic_exec:
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \tag_suspend:n {keyanspic}
       }
     \end{list}
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \tag_struct_end:n {tag=L}
         \tag_mc_begin_pop:n {}
@@ -14145,7 +14158,7 @@ Some text here
   {
     \bool_if:NF \l_@@_anspic_label_above_bool
       {
-        \IfPDFManagementActiveT
+        \IfDocumentMetadataT
           {
             \tag_suspend:n {keyanspic}
           }
@@ -14154,7 +14167,7 @@ Some text here
           {
             \box_ht_plus_dp:N \l_@@_anspic_body_box
           }
-        \IfPDFManagementActiveT
+        \IfDocumentMetadataT
           {
             \tag_resume:n {keyanspic}
           }
@@ -14285,7 +14298,7 @@ Some text here
       { \l_@@_anspic_above_int + 1 }
       { \l_@@_anspic_below_int }
       {
-        \IfPDFManagementActiveT
+        \IfDocumentMetadataT
           {
             \tag_suspend:n {minipage}
           }
@@ -14293,7 +14306,7 @@ Some text here
           \centering
           \seq_item:Nn \l_@@_anspic_args_seq { ##1 }
         \end{minipage}
-        \IfPDFManagementActiveT
+        \IfDocumentMetadataT
           {
             \tag_resume:n {minipage}
           }
@@ -14620,7 +14633,7 @@ Some text here
       {
         \@@_stop_list:
         \@@_stop_store_level_vii:
-        \IfPDFManagementActiveT { \tag_resume:n {enumext*} }
+        \IfDocumentMetadataT { \tag_resume:n {enumext*} }
         \end@@_mini_page
         \hfill
         \bool_gset_true:N \g_@@_minipage_active_vii_bool
@@ -14707,7 +14720,7 @@ Some text here
     \bool_if:NTF \l_@@_minipage_active_viii_bool
       {
         \@@_stop_list:
-        \IfPDFManagementActiveT { \tag_resume:n {keyans*} }
+        \IfDocumentMetadataT { \tag_resume:n {keyans*} }
         \end@@_mini_page
         \hfill
         \bool_gset_true:N \g_@@_minipage_active_viii_bool
@@ -14773,7 +14786,7 @@ Some text here
         \@@_before_keys_exec_vii:
       }
     \setcounter { enumXvii } { \int_eval:n { \int_use:c { l_@@_start_vii_int } - 1 } }
-    \IfPDFManagementActiveT { \tag_suspend:n {enumext*} }
+    \IfDocumentMetadataT { \tag_suspend:n {enumext*} }
     \@@_starred_columns_set_vii:
     \item[] \scan_stop:
     \cs_set_eq:NN \@@_stop_item_tmp_vii: \@@_first_item_tmp_vii:
@@ -14781,7 +14794,7 @@ Some text here
     \ignorespaces
   }
   {
-    \IfPDFManagementActiveT { \tag_struct_end:n {tag=text-unit} }
+    \IfDocumentMetadataT { \tag_struct_end:n {tag=text-unit} }
     \@@_stop_item_tmp_vii:
     \@@_remove_extra_parsep_vii:
     \@@_after_list_vii:
@@ -15115,7 +15128,7 @@ Some text here
         \legacy_if_set_false:n { @noitemarg }
         \legacy_if:nT { @nmbrlist }
           {
-            \IfPDFManagementActiveT
+            \IfDocumentMetadataT
               {
                 \bool_if:NT \l_@@_hyperref_bool
                   {
@@ -15320,7 +15333,7 @@ Some text here
         \@@_before_keys_exec_viii:
       }
     \setcounter { enumXviii } { \int_eval:n { \int_use:c { l_@@_start_viii_int } - 1 } }
-    \IfPDFManagementActiveT { \tag_suspend:n {keyans*} }
+    \IfDocumentMetadataT { \tag_suspend:n {keyans*} }
     \@@_starred_columns_set_viii:
     \item[] \scan_stop:
     \cs_set_eq:NN \@@_stop_item_tmp_viii: \@@_first_item_tmp_viii:
@@ -15328,7 +15341,7 @@ Some text here
     \ignorespaces
   }
   {
-    \IfPDFManagementActiveT { \tag_struct_end:n {tag=text-unit} }
+    \IfDocumentMetadataT { \tag_struct_end:n {tag=text-unit} }
     \@@_stop_item_tmp_viii:
     \@@_remove_extra_parsep_viii:
     \@@_check_starred_cmd:n { item }
@@ -16061,19 +16074,19 @@ Some text here
                             }
                         },
     enumext-2 .code:n = {
-                           \keys_set:nn { enumext / level-2 }
+                           \keys_set:ne { enumext / level-2 }
                             {
                               \@@_filter_level:n {#1}
                             }
                         },
     enumext-3 .code:n = {
-                          \keys_set:nn { enumext / level-3 }
+                          \keys_set:ne { enumext / level-3 }
                             {
                               \@@_filter_level:n {#1}
                             }
                         },
     enumext-4 .code:n = {
-                          \keys_set:nn { enumext / level-4 }
+                          \keys_set:ne { enumext / level-4 }
                             {
                               \@@_filter_level:n {#1}
                             }
