--- a/sources/enumext.sty
+++ b/sources/enumext.sty
@@ -564,7 +564,7 @@
   {
     \bool_if:NT \g__enumext_standar_bool
       {
-        \IfPDFManagementActiveTF
+        \IfDocumentMetadataTF
           {
             \__enumext_renew_footnote:
           }
@@ -580,7 +580,7 @@
   {
     \bool_if:NT \g__enumext_standar_bool
       {
-        \IfPDFManagementActiveTF
+        \IfDocumentMetadataTF
           {
             \__enumext_print_footnote:
           }
@@ -594,7 +594,7 @@
   }
 \cs_new_protected:Nn \__enumext_renew_footnote_starred:
   {
-    \IfPDFManagementActiveTF
+    \IfDocumentMetadataTF
       {
         \__enumext_renew_footnote_mini:
       }
@@ -607,7 +607,7 @@
   }
 \cs_new_protected:Nn \__enumext_print_footnote_starred:
   {
-    \IfPDFManagementActiveTF
+    \IfDocumentMetadataTF
       {
         \__enumext_print_footnote_mini:
       }
@@ -2096,7 +2096,7 @@
 %% Internal function to save counter value and set int vars for |series|, |resume| and |resume*| keys.
 \cs_new_protected:Nn \__enumext_standar_save_counter:
   {
-    \bool_if:NTF \g__enumext_standar_bool % enumext NOT nested
+    \bool_if:NTF \g__enumext_standar_bool
       {
         \__enumext_standar_save_counter_aux:
         \int_compare:nNnT { \l__enumext_level_int } = { 1 }
@@ -2140,7 +2140,7 @@
   }
 \cs_new_protected:Nn \__enumext_starred_save_counter:
   {
-    \bool_if:NTF \g__enumext_starred_bool % enumext* NOT nested
+    \bool_if:NTF \g__enumext_starred_bool
       {
         \__enumext_starred_save_counter_aux:
         \int_if_exist:cT { g__enumext_resume_ \l__enumext_store_name_tl _int }
@@ -3729,7 +3729,7 @@
 %% Redefinition of |\makelabel| for |\item| and |\item*[sym][sep]| in |enumext| environment.
 \cs_new_protected:Nn \__enumext_make_label:
   {
-    \IfPDFManagementActiveTF
+    \IfDocumentMetadataTF
       {
         \__enumext_make_label_box:
       }
@@ -3827,7 +3827,10 @@
 %% Add keys |unknown| for |enumext*| environment.
 \keys_define:nn { enumext / enumext* }
   {
-    unknown .code:n = { \__enumext_starred_unknown_keys:n {#1} },
+    unknown .code:n = {
+                        \tl_set:Nn \l__enumext_envir_name_tl { enumext* }
+                        \__enumext_starred_unknown_keys:n {#1}
+                      },
   }
 \cs_new_protected:Npn \__enumext_starred_unknown_keys:n #1
   {
@@ -3837,21 +3840,25 @@
   {
     \tl_if_blank:nTF {#2}
       {
-        \msg_error:nnn { enumext } { starred-unknown-key } {#1}
+        \msg_error:nne { enumext } { starred-unknown-key } {#1}
       }
       {
-        \msg_error:nnnn { enumext } { starred-unknown-key-value } {#1} {#2}
+        \msg_error:nnee { enumext } { starred-unknown-key-value } {#1} {#2}
       }
   }
 %% Add keys |unknown| for |enumext| environment.
 \cs_set_protected:Npn \__enumext_tmp:n #1
   {
-    \keys_define:nn { enumext / #1 }
+    \keys_define:nn { enumext / level-#1 }
       {
-        unknown .code:n = { \__enumext_standar_unknown_keys:n {##1} },
+        unknown .code:n = {
+                            \int_set:Nn \l__enumext_level_int { #1 }
+                            \tl_set:Nn \l__enumext_envir_name_tl { enumext }
+                            \__enumext_standar_unknown_keys:n {##1}
+                          },
       }
   }
-\clist_map_inline:nn { level-1,level-2,level-3,level-4 } { \__enumext_tmp:n {#1} }
+\clist_map_inline:nn {1, 2, 3, 4} { \__enumext_tmp:n {#1} }
 \cs_new_protected:Npn \__enumext_standar_unknown_keys:n #1
   {
     \exp_args:NV \__enumext_standar_unknown_keys:nn \l_keys_key_str {#1}
@@ -3860,10 +3867,10 @@
   {
     \tl_if_blank:nTF {#2}
       {
-        \msg_error:nnn { enumext } { standar-unknown-key } {#1}
+        \msg_error:nne { enumext } { standar-unknown-key } {#1}
       }
       {
-        \msg_error:nnnn { enumext } { standar-unknown-key-value } {#1} {#2}
+        \msg_error:nnee { enumext } { standar-unknown-key-value } {#1} {#2}
       }
   }
 \cs_new_protected:Npn \__enumext_keyans_default_item:n #1
@@ -3911,7 +3918,7 @@
 %% Redefine |\makelabel| for |keyans| environment.
 \cs_new_protected:Nn \__enumext_keyans_make_label:
   {
-    \IfPDFManagementActiveTF
+    \IfDocumentMetadataTF
       {
         \__enumext_keyans_make_label_box:
       }
@@ -4479,7 +4486,7 @@
 %% Wrap socket in conditional functions for tagging |enumext*| and |keyans*| environments.
 \cs_new_protected_nopar:Npn \__enumext_start_list_tag:n #1
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \socket_assign_plug:nn {tagsupport/__enumext/starred} {start-list-tags}
         \socket_use:nn {tagsupport/__enumext/starred} {#1}
@@ -4487,7 +4494,7 @@
    }
 \cs_new_protected_nopar:Nn \__enumext_stop_start_list_tag:
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \socket_assign_plug:nn {tagsupport/__enumext/starred} {stop-start-tags}
         \socket_use:nn {tagsupport/__enumext/starred} { }
@@ -4495,7 +4502,7 @@
    }
 \cs_new_protected_nopar:Npn \__enumext_stop_list_tag:n #1
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \socket_assign_plug:nn {tagsupport/__enumext/starred} {stop-list-tags}
         \socket_use:nn {tagsupport/__enumext/starred} {#1}
@@ -4533,7 +4540,7 @@
 %% Wrap socket in conditional functions for tagging |keyanspic| environment.
 \cs_new_protected_nopar:Nn \__enumext_anspic_start_list_tag:
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \socket_assign_plug:nn {tagsupport/__enumext/keyanspic} {start-list-tags}
         \socket_use:n {tagsupport/__enumext/keyanspic}
@@ -4541,7 +4548,7 @@
    }
 \cs_new_protected_nopar:Nn \__enumext_anspic_stop_start_list_tag:
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \socket_assign_plug:nn {tagsupport/__enumext/keyanspic} {stop-start-tags}
         \socket_use:n {tagsupport/__enumext/keyanspic}
@@ -4549,7 +4556,7 @@
    }
 \cs_new_protected_nopar:Nn \__enumext_anspic_stop_list_tag:
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \socket_assign_plug:nn {tagsupport/__enumext/keyanspic} {stop-list-tags}
         \socket_use:n {tagsupport/__enumext/keyanspic}
@@ -4656,7 +4663,7 @@
     \__enumext_keyans_pic_safe_exec:
     \__enumext_keyans_pic_parse_keys:n {#1}
     \begin{list} { } { \__enumext_keyans_pic_arg_two: }
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \tag_suspend:n {list}
       }
@@ -4665,7 +4672,7 @@
       {
         \msg_error:nn { enumext } { keyanspic-item-cmd }
       }
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \tag_resume:n {keyanspic}
         \tag_tool:n {para/tagging=false}
@@ -4673,19 +4680,19 @@
       }
   }
   {
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \tag_resume:n {keyanspic}
         \tag_mc_end_push:
         \tag_struct_begin:n {tag=L,attribute=enumerate}
       }
     \__enumext_anspic_exec:
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \tag_suspend:n {keyanspic}
       }
     \end{list}
-    \IfPDFManagementActiveT
+    \IfDocumentMetadataT
       {
         \tag_struct_end:n {tag=L}
         \tag_mc_begin_pop:n {}
@@ -4735,7 +4742,7 @@
   {
     \bool_if:NF \l__enumext_anspic_label_above_bool
       {
-        \IfPDFManagementActiveT
+        \IfDocumentMetadataT
           {
             \tag_suspend:n {keyanspic}
           }
@@ -4744,7 +4751,7 @@
           {
             \box_ht_plus_dp:N \l__enumext_anspic_body_box
           }
-        \IfPDFManagementActiveT
+        \IfDocumentMetadataT
           {
             \tag_resume:n {keyanspic}
           }
@@ -4836,7 +4843,7 @@
       { \l__enumext_anspic_above_int + 1 }
       { \l__enumext_anspic_below_int }
       {
-        \IfPDFManagementActiveT
+        \IfDocumentMetadataT
           {
             \tag_suspend:n {minipage}
           }
@@ -4844,7 +4851,7 @@
           \centering
           \seq_item:Nn \l__enumext_anspic_args_seq { ##1 }
         \end{minipage}
-        \IfPDFManagementActiveT
+        \IfDocumentMetadataT
           {
             \tag_resume:n {minipage}
           }
@@ -5050,7 +5057,7 @@
       {
         \__enumext_stop_list:
         \__enumext_stop_store_level_vii:
-        \IfPDFManagementActiveT { \tag_resume:n {enumext*} }
+        \IfDocumentMetadataT { \tag_resume:n {enumext*} }
         \end__enumext_mini_page
         \hfill
         \bool_gset_true:N \g__enumext_minipage_active_vii_bool
@@ -5116,7 +5123,7 @@
     \bool_if:NTF \l__enumext_minipage_active_viii_bool
       {
         \__enumext_stop_list:
-        \IfPDFManagementActiveT { \tag_resume:n {keyans*} }
+        \IfDocumentMetadataT { \tag_resume:n {keyans*} }
         \end__enumext_mini_page
         \hfill
         \bool_gset_true:N \g__enumext_minipage_active_viii_bool
@@ -5164,7 +5171,7 @@
         \__enumext_before_keys_exec_vii:
       }
     \setcounter { enumXvii } { \int_eval:n { \int_use:c { l__enumext_start_vii_int } - 1 } }
-    \IfPDFManagementActiveT { \tag_suspend:n {enumext*} }
+    \IfDocumentMetadataT { \tag_suspend:n {enumext*} }
     \__enumext_starred_columns_set_vii:
     \item[] \scan_stop:
     \cs_set_eq:NN \__enumext_stop_item_tmp_vii: \__enumext_first_item_tmp_vii:
@@ -5172,7 +5179,7 @@
     \ignorespaces
   }
   {
-    \IfPDFManagementActiveT { \tag_struct_end:n {tag=text-unit} }
+    \IfDocumentMetadataT { \tag_struct_end:n {tag=text-unit} }
     \__enumext_stop_item_tmp_vii:
     \__enumext_remove_extra_parsep_vii:
     \__enumext_after_list_vii:
@@ -5333,7 +5340,7 @@
         \legacy_if_set_false:n { @noitemarg }
         \legacy_if:nT { @nmbrlist }
           {
-            \IfPDFManagementActiveT
+            \IfDocumentMetadataT
               {
                 \bool_if:NT \l__enumext_hyperref_bool
                   {
@@ -5445,7 +5452,7 @@
         \__enumext_before_keys_exec_viii:
       }
     \setcounter { enumXviii } { \int_eval:n { \int_use:c { l__enumext_start_viii_int } - 1 } }
-    \IfPDFManagementActiveT { \tag_suspend:n {keyans*} }
+    \IfDocumentMetadataT { \tag_suspend:n {keyans*} }
     \__enumext_starred_columns_set_viii:
     \item[] \scan_stop:
     \cs_set_eq:NN \__enumext_stop_item_tmp_viii: \__enumext_first_item_tmp_viii:
@@ -5453,7 +5460,7 @@
     \ignorespaces
   }
   {
-    \IfPDFManagementActiveT { \tag_struct_end:n {tag=text-unit} }
+    \IfDocumentMetadataT { \tag_struct_end:n {tag=text-unit} }
     \__enumext_stop_item_tmp_viii:
     \__enumext_remove_extra_parsep_viii:
     \__enumext_check_starred_cmd:n { item }
@@ -5877,19 +5884,19 @@
                             }
                         },
     enumext-2 .code:n = {
-                           \keys_set:nn { enumext / level-2 }
+                           \keys_set:ne { enumext / level-2 }
                             {
                               \__enumext_filter_level:n {#1}
                             }
                         },
     enumext-3 .code:n = {
-                          \keys_set:nn { enumext / level-3 }
+                          \keys_set:ne { enumext / level-3 }
                             {
                               \__enumext_filter_level:n {#1}
                             }
                         },
     enumext-4 .code:n = {
-                          \keys_set:nn { enumext / level-4 }
+                          \keys_set:ne { enumext / level-4 }
                             {
                               \__enumext_filter_level:n {#1}
                             }
